--- a/_layouts/publication_listing.html
+++ b/_layouts/publication_listing.html
@@ -1,1 +1,109 @@
+---
+layout: default
+classes: wide
+---
 
+{% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
+  {% include page__hero.html %}
+{% elsif page.header.video.id and page.header.video.provider %}
+  {% include page__hero_video.html %}
+{% endif %}
+
+{% if page.url != "/" and site.breadcrumbs %}
+  {% unless paginator %}
+    {% include breadcrumbs.html %}
+  {% endunless %}
+{% endif %}
+
+<div id="main" role="main">
+  {% include sidebar.html %}
+
+  <article class="page" itemscope itemtype="http://schema.org/CreativeWork">
+    {% if page.title %}<meta itemprop="headline" content="{{ page.title | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
+    {% if page.excerpt %}<meta itemprop="description" content="{{ page.excerpt | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
+    {% if page.date %}<meta itemprop="datePublished" content="{{ page.date | date: "%B %d, %Y" }}">{% endif %}
+    {% if page.last_modified_at %}<meta itemprop="dateModified" content="{{ page.last_modified_at | date: "%B %d, %Y" }}">{% endif %}
+
+    <div class="page__inner-wrap">
+
+      <!-- Header-->
+      {% unless page.header.overlay_color or page.header.overlay_image %}
+        <header>
+          {% if page.typeset_title %}
+          <h1 id="page-title" class="page__title" itemprop="headline">{{ page.typeset_title | markdownify | remove: "<p>" | remove: "</p>" }}</h1>
+          {% elsif page.title %}
+          <h1 id="page-title" class="page__title" itemprop="headline">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</h1>
+          {% endif %}
+          {% if page.read_time %}
+            <p class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
+          {% endif %}
+        </header>
+      {% endunless %}
+      
+      <!-- Author List -->
+      {% if page.authorlist_long %}
+      <p class="publication_authors">{{ page.authorlist_long | markdownify | remove: "<p>" | remove: "</p>" }}</p>
+      {% elsif page.authorlist %}
+      <p class="publication_authors">{{ page.authorlist | markdownify | remove: "<p>" | remove: "</p>" }}</p>
+      {% endif %}
+      
+      <!-- Handle link -->
+      {% if page.doi %}
+      <p class="publication_date"><a href="https://doi.org/{{ page.doi }}">doi:{{ page.doi }}</a></p>
+      {% endif %}
+      {% if page.hdl %}
+      <p class="publication_date"><a href="https://hdl.handle.net/{{ page.hdl }}">hdl:{{ page.hdl }}</a></p>
+      {% endif %}
+      {% if page.arxiv %}
+      <p class="publication_date"><a href="https://arxiv.org/abs/{{ page.arxiv }}">arxiv:{{ page.arxiv }}</a></p>
+      {% endif %}
+      {% if page.bibcode %}
+      <p class="publication_date"><strong>Bibcode: </strong><a href="https://ui.adsabs.harvard.edu/abs/{{ page.bibcode }}/abstract">{{ page.bibcode }}</a></p>
+      {% endif %}
+      {% if page.ascl %}
+      <p class="publication_date"><a href="https://ascl.net/{{ page.ascl }}"><img src="https://img.shields.io/badge/ascl-{{ page.ascl }}-blue.svg?colorB=262255" alt="ascl:{{ page.ascl }}"/></a></p>
+      {% endif %}
+
+      <!--Date Line-->
+      {% if page.date %}
+        {% if page.publ == "false" %}
+            <p class="pubplication_date">
+              <strong>In Prep</strong> - This page will be udpated upon submission and publication.
+            </p>
+        {% else %}
+            <p class="publication_date">
+              <strong><i class="fas fa-fw fa-calendar-alt" aria-hidden="true"></i>Published:</strong> <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</time>
+            </p>
+        {% endif %}
+      {% endif %}
+    
+      <!-- Publisher -->
+      {% if page.venue %}
+      <p class="publication_venue"><strong>Published in:</strong> {{ page.venue | markdownify | remove: "<p>" | remove: "</p>" }}</p>
+      {% endif %}
+      
+      <!-- Abstract 
+      {% if page.excerpt %}
+      <h3 itemprop="headline">Abstract:</h3>
+      <p class="page__content" itemprop="text"> {{ page.excerpt | markdownify | remove: "<p>" | remove: "</p>" }}</p>
+      {% endif %}-->
+
+      <!--Page content-->
+      <section class="page__content" itemprop="text">
+        {{ content }}
+        {% if page.link %}<div><a href="{{ page.link }}" class="btn btn--primary">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
+      </section>
+
+      <!-- Footer -->
+      <footer class="page__meta">
+        {% if site.data.ui-text[site.locale].meta_label %}
+          <h4 class="page__meta-title">{{ site.data.ui-text[site.locale].meta_label }}</h4>
+        {% endif %}
+        {% include page__taxonomy.html %}
+      </footer>
+
+    </div>
+
+  </article>
+
+</div>
