--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -57,8 +57,8 @@
     {% endif %}
 
 
-    <!-- Print the excerpt -->
-    <p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify }}</p>
+    <!-- Print the excerpt 
+    <p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify }}</p>-->
 
 
 
